# nomifun-tauri

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  SECURITY.md  STATUS.md  docker-compose.yml  package.json  pnpm-lock.yaml  rustfmt.toml
apps/desktop/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/signing/: .env.signing.example  README.md
apps/desktop/src/: main.rs  memory_panel_window.rs  relocate.rs
apps/desktop/updater/: README.md  latest.json
apps/web/: Cargo.toml
apps/web/src/: main.rs
crates/agent/nomi-a11y/: Cargo.toml
crates/agent/nomi-a11y/dev/: Dockerfile.linux-a11y  README.md  run-linux-a11y.sh  smoke.sh
crates/agent/nomi-a11y/examples/: linux_smoke.rs  winsmoke.rs
crates/agent/nomi-a11y/src/: engine.rs  lib.rs  overlay.rs  selector.rs  tree.rs
crates/agent/nomi-agent/: Cargo.toml
crates/agent/nomi-agent/src/: agents_md.rs  bootstrap.rs  cache_diagnostics.rs  companion_tools.rs  confirm.rs  context.rs  context_contributor.rs  cron_tools.rs  engine.rs  knowledge_tools.rs  lib.rs  local_agent_invocation.rs  local_delegate_tool.rs  local_delegation_progress.rs  loop_guard.rs  memory_tools.rs  orchestration.rs  requirement_tools.rs  session.rs  skill_tool.rs  spawn_tool.rs  spawner.rs  taskboard.rs  tool_execution.rs  vcr.rs
crates/agent/nomi-agent/tests/: autocompact_test.rs  bootstrap_test.rs  compact_types_test.rs  cwd_injection_test.rs  deferred_activation_test.rs  emergency_test.rs  engine_compact_test.rs  engine_test.rs  json_stream_approval_test.rs  memory_context_integration.rs  microcompact_test.rs  orchestration_test.rs  output_compaction_test.rs  plan_e2e_test.rs  plan_engine_test.rs  plan_prompt_file_test.rs  plan_tools_test.rs  skills_e2e.rs  spawn_description_test.rs  spawn_test.rs  tool_execution_test.rs  tool_guidance_prompt_test.rs
crates/agent/nomi-browser/: Cargo.toml
crates/agent/nomi-browser-engine/: Cargo.toml
crates/agent/nomi-browser-engine/injected/: NOTICE  build.sh
crates/agent/nomi-browser-engine/src/: acquire.rs  actionability.rs  actions.rs  aria_ref.rs  debug_capture.rs  display.rs  download.rs  engine.rs  errmap.rs  evaluate.rs  firewall.rs  injected.rs  input.rs  launch.rs  lib.rs  nav.rs  observe.rs  profile.rs  progress.rs  redact.rs  selector.rs  session.rs  storage_state.rs  switches.rs  tabs.rs  transport.rs  vault.rs
crates/agent/nomi-browser-engine/tests/: integration_act.rs  integration_d4.rs  integration_debug_capture.rs  integration_e4.rs  integration_e5.rs  integration_factions.rs  integration_indexeddb.rs  integration_multiorigin_storage.rs  integration_nav.rs  integration_oopif.rs  integration_single_tab.rs  integration_takeover.rs  integration_w4b.rs  integration_w4c.rs  integration_w4d.rs  observe_fixtures.rs  op_mutex_concurrency.rs
crates/agent/nomi-browser/src/: approval.rs  extract.rs  lib.rs  recording.rs  redline.rs  replay.rs  site_memory.rs  takeover.rs  tool.rs  visual_fallback.rs
crates/agent/nomi-browser/tests/: integration_e2e.rs  site_memory.rs  site_memory_e2e.rs  visual_fallback.rs
crates/agent/nomi-cli/: Cargo.toml
crates/agent/nomi-cli/src/: main.rs
crates/agent/nomi-computer/: Cargo.toml
crates/agent/nomi-computer/examples/: appresolve.rs
crates/agent/nomi-computer/src/: fallback_backend.rs  input.rs  keys.rs  launch.rs  lib.rs  permissions.rs  scale.rs  screen.rs  tool.rs
crates/agent/nomi-config/: Cargo.toml
crates/agent/nomi-config/src/: auth.rs  compact.rs  compat.rs  config.rs  features.rs  file_cache.rs  hooks.rs  lib.rs  logging.rs  plan.rs  shell.rs
crates/agent/nomi-config/tests/: compact_config_test.rs  logging_integration.rs  plan_config_test.rs
crates/agent/nomi-mcp/: Cargo.toml
crates/agent/nomi-mcp/src/: config.rs  lib.rs  manager.rs  protocol.rs  tool_proxy.rs
crates/agent/nomi-memory/: Cargo.toml
crates/agent/nomi-memory/src/: distill.rs  error.rs  index.rs  lib.rs  paths.rs  prompt.rs  store.rs  types.rs
crates/agent/nomi-memory/tests/: e2e_integration.rs  index_integration.rs  paths_integration.rs  prompt_integration.rs  store_integration.rs
crates/agent/nomi-protocol/: Cargo.toml
crates/agent/nomi-protocol/src/: commands.rs  events.rs  lib.rs  reader.rs  writer.rs
crates/agent/nomi-protocol/tests/: approval_manager_test.rs  capability_discovery_test.rs  commands_test.rs  set_config.rs
crates/agent/nomi-providers/: Cargo.toml
crates/agent/nomi-providers/src/: anthropic.rs  anthropic_shared.rs  bedrock.rs  lib.rs  openai.rs  retry.rs  vertex.rs
crates/agent/nomi-providers/tests/: provider_anthropic_test.rs  provider_openai_test.rs
crates/agent/nomi-skills/: Cargo.toml
crates/agent/nomi-skills/src/: bundled_supplemental_tests.rs  conditional.rs  conditional_supplemental_tests.rs  context_modifier.rs  discovery.rs  discovery_supplemental_tests.rs  executor.rs  frontmatter.rs  frontmatter_tests.rs  hooks.rs  integration_tests.rs  lib.rs  loader.rs  loader_supplemental_tests.rs  loader_tests.rs  mcp.rs  paths.rs  permissions.rs  permissions_supplemental_tests.rs  prompt.rs  shell.rs  shell_supplemental_tests.rs  substitution.rs  types.rs  watcher.rs  (+1 more)
crates/agent/nomi-tools/: Cargo.toml
crates/agent/nomi-types/: Cargo.toml
crates/backend/nomifun-agent-execution/: Cargo.toml
crates/backend/nomifun-ai-agent/: Cargo.toml
crates/backend/nomifun-app/: Cargo.toml  build.rs
crates/backend/nomifun-assets/: Cargo.toml
crates/backend/nomifun-assistant/: Cargo.toml
crates/backend/nomifun-auth/: Cargo.toml
crates/backend/nomifun-channel/: Cargo.toml
crates/backend/nomifun-common/: Cargo.toml  build.rs
crates/backend/nomifun-companion/: Cargo.toml
crates/backend/nomifun-conversation/: Cargo.toml
crates/backend/nomifun-creation/: Cargo.toml
crates/backend/nomifun-cron/: Cargo.toml
crates/backend/nomifun-db/: Cargo.toml
(+2852 files in other folders)
