[package]
name = "nomi-cli"
description = "CLI binary for Nomi — a multi-provider AI agent with tool execution and delegation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["ai", "agent", "cli", "llm", "anthropic"]
categories = ["command-line-utilities"]

[[bin]]
name = "nomi"
path = "src/main.rs"

[dependencies]
nomi-agent = { workspace = true, features = ["computer-use"] }
nomi-compact.workspace  = true
nomi-config.workspace   = true
nomi-memory.workspace   = true
nomi-providers.workspace = true
nomi-tools.workspace    = true
nomi-mcp.workspace      = true
nomi-protocol.workspace = true
nomi-skills.workspace   = true
nomi-process-runtime.workspace = true

tokio.workspace              = true
anyhow.workspace             = true
clap.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
