[package]
name = "nomi-providers"
description = "LLM provider implementations for Nomi (Anthropic, OpenAI, Bedrock, Vertex)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nomi-types.workspace  = true
nomi-config.workspace = true
nomifun-net.workspace = true

tokio.workspace        = true
futures.workspace      = true
reqwest.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
async-trait.workspace  = true
thiserror.workspace    = true
dirs.workspace         = true
base64.workspace       = true
uuid.workspace         = true
jsonwebtoken.workspace = true

aws-sigv4.workspace            = true
aws-credential-types.workspace = true
aws-config.workspace           = true

tracing.workspace        = true


[dev-dependencies]
wiremock.workspace   = true
tokio-test.workspace = true
http.workspace       = true
