[package]
name = "nomi-skills"
description = "Skills system for Nomi: named prompt snippets with tool orchestration, permissions, hooks, and MCP integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nomi-types.workspace   = true
nomi-config.workspace  = true
nomi-mcp.workspace     = true

tracing.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
serde_yaml.workspace   = true
tokio.workspace        = true
futures.workspace      = true
async-trait.workspace  = true
thiserror.workspace    = true
glob.workspace         = true
dirs.workspace         = true
regex.workspace        = true
notify.workspace       = true
unicode-width.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true


[dev-dependencies]
nomi-mcp = { workspace = true, features = ["test-utils"] }
tempfile.workspace   = true
rstest.workspace     = true
serial_test.workspace = true
